--- a/achievements.html
+++ b/achievements.html
@@ -18,18 +18,59 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">About Joel</a>
+                            <a class="nav-link" href="./index.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-square" viewBox="0 0 16 16">
+                                    <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                    <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+                                </svg>
+                                About
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./achievements.html">Experience</a>
+                            <a class="nav-link active" href="./achievements.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-square" viewBox="0 0 16 16">
+                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                                    <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
+                                </svg>
+                                Experience
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./gallery.html">Gallery</a>
+                            <a class="nav-link" href="./gallery.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
+                                    <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+                                    <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2M14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1M2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1z"/>
+                                </svg>
+                                Gallery
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+        <table class="table table-borderless">
+            <thead>
+                <tr>
+                    <th class="col-1">Kenyon Review</th>
+                    <th class="col-1">Kenyon College Writing Center</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Read 8 submissions of poetry and prose work per week alongside 180 similar submissions within 2 weeks as accords with contest timelines</td>
+                    <td>Peer review student writing to provide both conceptual and mechanical criticism</td>
+                </tr>
+                <tr>
+                    <td>Argue why successful submissions should be seen by the editorial team or contest judge through detail-oriented textual analysis</td>
+                    <td>Serve as liaison for “Elements of Statistics” students, ensuring their papers are in accordance with course-specific standards</td>
+                </tr>
+                <tr>
+                    <td>Participate in a weekly seminar led by the editorial team on identifying good submissions</td>
+                </tr>
+            </tbody>
+        </table>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
